--- a/src/scss/blocks-all/_header.scss
+++ b/src/scss/blocks-all/_header.scss
@@ -54,7 +54,7 @@
     }
     .header.sticky
     {
-        position: static;
+        // position: static;
         display: none;
     }
     .header__logo
