--- a/src/scss/blocks-all/_header.scss
+++ b/src/scss/blocks-all/_header.scss
@@ -52,14 +52,10 @@
     {
         display: none;
     }
-    .header.sticky
-    {
-        // position: static;
-        display: none;
-    }
     .header__logo
     {
         width: 75px;
+        margin-right: 106px;
     }
 
 }
