--- a/src/scss/blocks-all/_footer.scss
+++ b/src/scss/blocks-all/_footer.scss
@@ -17,6 +17,10 @@
 {
     padding-left: 24px;
 }
+.footer__svg-img
+{
+    fill: #ccc;
+}
 
 @media screen and (max-width: 690px)
 {
@@ -32,6 +36,8 @@
     .footer__nav-list
     {
         margin-left: 0;
+        margin-right: 20px;
+        padding-bottom: 88px;
     }
     .footer__nav-list-item
     {
