--- a/src/scss/blocks-all/_nav.scss
+++ b/src/scss/blocks-all/_nav.scss
@@ -1,64 +1,78 @@
-.nav__list
-{
+.nav__list {
     list-style: none;
     display: flex;
 }
-.nav__list-item
-{
+
+.nav__list-item {
     padding-left: 32px;
 
 
-    &:nth-child(1)
-    {
+    &:nth-child(1) {
         margin-left: 0;
     }
 }
-.nav__list-link
-{
+
+.nav__list-link {
     text-decoration: none;
     color: #939CAA;
     font-size: $size;
     line-height: $olchami;
     font-weight: 700;
 }
-@media screen and (max-width: 690px)
-{
-    .nav
-    {
+@keyframes opener{
+    0% {
+        transform: translateX(-100%);
+    }
+
+    70% {
+        transform: translateX(70px);
+    }
+    
+
+    100% {
+        transform: translate(0);
+    }
+}
+
+@media screen and (max-width: 690px) {
+    .nav {
         display: none;
     }
-    .nav--active
-    {
-        display: block;
+
+    .nav--active {
         position: absolute;
-        background-color: #333A44;
-        top: 218%;
+        background: linear-gradient(to right, #333A44 80%, rgba(#333A44, 0.7) 80%, rgba(#333A44, 0.7) 100%, );
+        top: 237%;
         left: 0;
-        width: 70%;
-        height: calc(100vh - 44px);
+        width: 100%;
+        height: 100vh;
+        display: block;
+        overflow: hidden;
+        animation: opener 0.4s reverse;
     }
-    .nav--2
-    {
+
+    .nav--2 {
         display: block;
     }
-    .nav
-    {
-        margin: 0;
-    }
-    .nav__list
-    {
+
+    .nav__list {
         flex-direction: column;
-        padding-top: 64px;
+        padding-top: 30px;
+        padding-bottom: 45px;
     }
-    .nav__list-item
-    {
+
+    .nav__list-item {
         margin: 0;
         padding: 0;
         padding-bottom: 16px;
     }
-    .nav__list-link
-    {
+
+    .nav__list-link {
         color: #fff;
 
+    }
+    .nav__list--2
+    {
+        text-align: center;
     }
 }
