--- a/src/scss/blocks-all/_section.scss
+++ b/src/scss/blocks-all/_section.scss
@@ -119,6 +119,13 @@
     background-color: #FCB72B;
     color: #fff;
     padding: 14px 44px;
+
+    &:hover
+    {
+        background-color: #fff;
+        color: #FCB72B;
+        border: 1px solid #FCB72B;
+    }
 }
 
 @media screen and (max-width: 1105px) {
