--- a/src/scss/blocks-all/_header.scss
+++ b/src/scss/blocks-all/_header.scss
@@ -3,7 +3,10 @@
     z-index: 20;
     align-items: center;
     top: 0;
-    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    background-color: #fff;
+
 }
 
 .header__container
@@ -38,6 +41,12 @@
     background-color:#FCB72B;
     padding: 14px 39px;
     margin-left: auto;
+    &:hover
+    {
+        color: #FCB72B;
+        background: 0;
+        border: 1px solid #FCB72B;
+    }
 }
 
 @media screen and (max-width: 690px)
