--- a/src/scss/blocks-all/_nav.scss
+++ b/src/scss/blocks-all/_nav.scss
@@ -47,10 +47,10 @@
     .nav--active {
         position: absolute;
         background: linear-gradient(to right, #333A44 80%, rgba(#333A44, 0.7) 80%, rgba(#333A44, 0.7) 100%, );
-        top: 166%;
+        top: 180%;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: calc(100vh - 56px);
         display: block;
         overflow: hidden;
         animation: opener 0.4s reverse;
@@ -58,6 +58,7 @@
 
     .nav--2 {
         display: block;
+        left: 0;
     }
 
     .nav__list {
