--- a/src/scss/blocks-all/_blocks-all.scss
+++ b/src/scss/blocks-all/_blocks-all.scss
@@ -6,7 +6,7 @@
 @import "section";
 @import "intro";
 @import "footer";
-@import "bugre";
+@import "burger";
 @import "nav";
 @import "content";
 @import "section-about";
