--- a/src/scss/blocks-all/_faqs.scss
+++ b/src/scss/blocks-all/_faqs.scss
@@ -23,18 +23,29 @@
     font-weight: 700;
     color: #495567;
     background-color: #F2F5F9;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+    padding-right: 340px;
 }
 .faqs__text
 {
     font-size: 24px;
     line-height: 28px;
     letter-spacing: -1px;
+    padding: 32px 40px;
+    padding-right: 300px;
     font-weight: 700;
     color: #495567;
     background-color: #F2F5F9;
-    padding: 32px 40px;
     position: relative;
+    border: none;
+    margin-bottom: 20px;
 
+    &:hover
+    {
+        background-color: #FFF4DF;
+    }
     &::after
     {
         content: '';
@@ -55,6 +66,10 @@
     color: #495567;
     @include font;
     width: 650px;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
 .faqs__item
 {
@@ -69,6 +84,7 @@
     border: none;
     text-align: left;
     cursor: pointer;
+    margin-bottom: 20px;
 
     &::after
     {
@@ -88,7 +104,7 @@
 }
 .faqs__paragrif
 {
-    // display: none;
+    display: none;
 }
 
 @media screen and (max-width: 1105px)
@@ -97,6 +113,18 @@
     {
         flex-direction: column;
         align-items: center;
+    }
+    .faqs__textt
+    {
+        padding-right: 270px;
+    }
+    .faqs__paragrif
+    {
+        width: 572px;
+    }
+    .faqs__text
+    {
+        padding-right: 226px;
     }
 }
 @media screen and (max-width: 690px)
@@ -110,11 +138,17 @@
     }
     .faqs__textt
     {
-        width: 251px;
+        width: auto;
+        font-size: 18px;
+        line-height: 24px;
+        padding-right: 28px;
+        width: 219px;
     }
     .faqs__paragrif
     {
         width: 251px;
+        line-height: 25px;
+        font-size: 15px;
     }
     .faqs__title
     {
@@ -124,9 +158,10 @@
     .faqs__wrapp
     {
         text-align: left;
+
         &::after{
-            top: 80px;
-            right: 30px;
+            top: 65px;
+            right: 50px;
         }
     }
     .faqs__text
@@ -134,6 +169,14 @@
         width: auto;
         font-size: 18px;
         line-height: 24px;
+        // padding-right: 60px;
+        padding: 0;
+        padding: 32px 44px 32px 32px;
+
+        &::after
+        {
+            right: 18px;
+        }
     }
     
 }
