--- a/src/scss/blocks-all/_header.scss
+++ b/src/scss/blocks-all/_header.scss
@@ -1,8 +1,10 @@
 .header {
-    position: sticky;
+    position: fixed;
     z-index: 20;
     align-items: center;
     top: 0;
+    width: 100%;
+    padding-bottom: 15px;
     padding-top: 20px;
     background-color: #fff;
 
@@ -14,6 +16,13 @@
     display: flex;
 }
 
+
+.header.sticky {
+  background: rgb(229, 226, 226);
+  padding: 20px 20px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+  animation: open 0.3s linear;
+}
 @keyframes open {
     from {
       transform: translateY(-100%);
@@ -22,13 +31,6 @@
     to {
      transform: translateY(0);
    }
-   }
-   
-   .header.sticky {
-     background: rgb(229, 226, 226);
-     padding: 10px 20px;
-     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-     animation: open 0.3s linear;
    }
 
 .header__link
