--- a/src/scss/blocks-all/_burger.scss
+++ b/src/scss/blocks-all/_burger.scss
@@ -38,8 +38,10 @@
     .hamburger{
         display: block;
     }
-    .hamburger--active .header__link
-    {
-        display: block;
-    }
+    // .hamburger--active .header__link
+    // {
+    //     display: block;
+    //     z-index: 50;
+    //     position: absolute;
+    // }
 }
