--- a/src/scss/blocks-all/_header.scss
+++ b/src/scss/blocks-all/_header.scss
@@ -55,13 +55,13 @@
    
     .header__link
     {
-        display: none;
+      display: none;
     }
 
-    .header.sticky
-    {
-        display: none;
-    }
+    // .header.sticky
+    // {
+    //     display: none;
+    // }
     .header__logo
     {
         width: 75px;
