--- a/src/scss/blocks-all/_nav.scss
+++ b/src/scss/blocks-all/_nav.scss
@@ -28,6 +28,7 @@
         color: #FCB72B;
     }
 }
+
 @keyframes opener{
     0% {
         transform: translateX(-100%);
@@ -69,6 +70,7 @@
         flex-direction: column;
         padding-top: 30px;
         padding-bottom: 45px;
+        margin-left: 40px;
     }
 
     .nav__list-item {
@@ -85,5 +87,8 @@
     {
         text-align: center;
         flex-direction: column;
+        margin-left: 40px;
+        margin-top: 41px;
+        margin-bottom: 87px;
     }
 }
