--- a/src/scss/blocks-all/_section-about.scss
+++ b/src/scss/blocks-all/_section-about.scss
@@ -2,10 +2,16 @@
     display: flex;
     align-items: center;
     position: relative;
-
-    &:nth-child(2) {
+    flex-grow: 1;
+    &:nth-child(2n) {
         flex-direction: row-reverse;
+        flex-grow: 1;
 
+    }
+    .section-about__list
+    {
+        margin: 0;
+        padding: 0;
     }
 
     &::after {
@@ -16,6 +22,7 @@
         width: 445px;
         height: 445px;
         transform: translateX(248%);
+        left: 64px;
     }
 }
 
@@ -29,6 +36,11 @@
     top: 265px;
     z-index: 1;
 }
+.section-about__item--l::before {
+    transform: rotateX(180deg);
+    top: 304px;
+    height: 150px;
+}
 
 .section-about__item--2::before {
     content: '';
@@ -36,7 +48,7 @@
     background: url("../img/strelka.png") no-repeat center center;
     width: 735px;
     height: 139px;
-    left: -38%;
+    left: -36%;
     top: 9px;
 }
 
@@ -47,15 +59,16 @@
     border-radius: 50%;
     width: 445px;
     height: 445px;
-    transform: translateX(-252%);
+    transform: translateX(-125%);
 }
 
 .section-about__wrapper {
-    margin-right: auto;
+    flex-grow: 1;
 }
 
 .section-about__wrapper--2 {
-    margin-left: auto;
+    flex-grow: 1;
+    margin-left: 200px;
 }
 
 .section-about__title {
@@ -95,7 +108,7 @@
         }
 
         &::after {
-            transform: translateX(110%);
+            transform: translateX(122%);
         }
     }
 
@@ -116,13 +129,13 @@
     }
 
     .section-about__item--2::before {
-        left: -51%;
-        top: 33px;
+        left: -40%;
+        top: 0;
 
     }
 
     .section-about__item--1::before {
-        left: -6%;
+        left: -2%;
         top: 264px;
     }
 
@@ -131,7 +144,8 @@
     }
 
     .section-about__item--2::after {
-        transform: translateX(-114%);
+        transform: translateX(-102%);
+        top: -25px;
     }
 }
 
@@ -160,7 +174,7 @@
         top: 119px;
     }
     .section-about__item--2::before {
-        left: -116%;
+        left: -92%;
         top: 0;
     }
     .section-about__text
@@ -170,5 +184,8 @@
     .section-about__title
     {
         margin-top: 56px;
+        width: 311px;
+        font-size: 32px;
+        line-height: 32px;
     }
 }
