--- a/src/scss/_generals.scss
+++ b/src/scss/_generals.scss
@@ -18,6 +18,11 @@ a {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
+}
+ol {
+    list-style: none;
 }
  img{
      max-width: 100%;
