--- a/src/scss/blocks-all/_about-content.scss
+++ b/src/scss/blocks-all/_about-content.scss
@@ -6,6 +6,9 @@
     letter-spacing: -2px;
     text-align: center;
 }
+.about-content {
+    margin-top: 130px;
+}
 .about-content__list
 {
     display: flex;
@@ -164,5 +167,10 @@
     .about-content__paragrif
     {
         width: 311px;
+    }
+    .about-content__title {
+        width: 311px;
+        font-size: 32px;
+        line-height: 32px;
     }
 }
