--- a/src/scss/blocks-all/_footer.scss
+++ b/src/scss/blocks-all/_footer.scss
@@ -24,10 +24,6 @@
 
 @media screen and (max-width: 690px)
 {
-    .footer__nav-list
-    {
-        margin: 0;
-    }
     .footer__container
     {
         display: block;
@@ -35,8 +31,8 @@
     }
     .footer__nav-list
     {
-        margin-left: 0;
-        margin-right: 20px;
+        margin-left: 29px;
+        // margin-right: 20px;
         padding-bottom: 88px;
     }
     .footer__nav-list-item
