--- a/src/scss/blocks-all/_wrapper.scss
+++ b/src/scss/blocks-all/_wrapper.scss
@@ -132,6 +132,9 @@
     {
         flex-direction: column;
         text-align: center;
+        width: 311px;
+        left: 38%;
+        margin-top: 200px;
 
         &::before
         {
@@ -144,20 +147,25 @@
     }
     .wrapper__list-item
     {
-
-        &::before
-        {
-            left: 0;
-        }
-    }
-    .wrapper__list-item
-    {
         flex-direction: column;
         padding: 0;
+        margin-bottom: 170px;
+
+        &:last-child{
+            margin-bottom: 0;
+        }
 
         &::before {
-            position: static;
+            position: absolute;
             display: inline-block;
-        }
+            left: 113px;
+            top: -110px;
+        }   
+    }
+    .wrapper__title
+    {
+        font-size: 20px;
+        line-height: 28px;
+        margin-left: 45px;
     }
 }
