--- a/src/scss/blocks-all/_section.scss
+++ b/src/scss/blocks-all/_section.scss
@@ -288,4 +288,9 @@
     .section__title{
         text-align: center;
     }
+    .section__link {
+        margin: 0;
+        margin-left: 65px;
+        margin-top: 32px;
+    }
 }
