--- a/src/scss/blocks-all/_intro.scss
+++ b/src/scss/blocks-all/_intro.scss
@@ -2,6 +2,7 @@
 {
     position: relative;
     background-color: #495567;
+    margin-top: 120px;
     
     // &::after
     // {
@@ -33,8 +34,6 @@
     font-weight: $qalinligi;
     color: #fff;
     margin-right: auto;
-    margin-left: 30px;
-
 }
 
 @media screen and (max-width: 1105px)
