--- a/src/scss/blocks-all/_section-about.scss
+++ b/src/scss/blocks-all/_section-about.scss
@@ -4,8 +4,8 @@
     position: relative;
     flex-grow: 1;
     &:nth-child(2n) {
-        flex-direction: row-reverse;
-        flex-grow: 1;
+    flex-direction: row-reverse;
+    flex-grow: 1;
 
     }
     .section-about__list
@@ -62,8 +62,16 @@
     transform: translateX(-125%);
 }
 
+.section-about__wrapper--wrap {
+    
+}
+
 .section-about__wrapper {
     flex-grow: 1;
+
+    &:first-child {
+        // margin-bottom: 0;
+    }
 }
 
 .section-about__wrapper--2 {
@@ -105,6 +113,7 @@
 
         &:nth-child(2) {
             flex-direction: column;
+            margin-top: 120px;
         }
 
         &::after {
@@ -121,9 +130,8 @@
     .section-about__wrapper {
         order: 2;
         margin-top: 56px;
-        margin-bottom: 120px;
+        margin-left: 0;
     }
-
     .section-about__title {
         margin: 0 auto;
     }
@@ -166,8 +174,7 @@
     }
 
     .section-about__wrapper {
-        margin: 0;
-        margin-bottom: 120px;
+        margin-top: 0;
     }
     .section-about__item--1::before {
         left: -2%;
